// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class_1.rb 1`] = `
class TestClass
  def initialize(a)
    puts a
  end
end~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
class TestClass
  def initialize(a)
    puts a
  end
end

`;

exports[`class_2.rb 1`] = `
class Processor < AST::Processor
  def initialize(a)
    puts a
  end
end
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
class Processor < AST::Processor
  def initialize(a)
    puts a
  end
end

`;
